[package]
name = "blockchain"
version = "0.1.0"
authors = ["bdnf <oleg.bdnf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.8.0"
hex-literal = "0.2.1"
openssl = "0.10.26"